// syntax = "proto3";

// package pb;
// option go_package = "./pkg/pb";

// import "google/protobuf/empty.proto";

// service UserService {
//  rpc Profile (UserId) returns (ProfileResponse);
//  rpc Addaddress (Address) returns (error);
//  rpc UpdateAddress (AddressPatchRequest) returns (error);
//  rpc DeleteAddress (UserId,AddressId) returns (error);
//  rpc GetAllAddress (UserId) returns ([]Address);
//  rpc SaveCartItem (SaveCartItemRequest) returns ();
//  rpc GetCartItemsbyCartId (Pagination,UserId) returns ([]GetCartItemsbyCartIdResponse);  
//  rpc UpdateCart (UpdateCartRequest) returns ();  
//  rpc RemoveCartItem  (DeleteCartResponse) returns ();  
//  rpc AddToWishlist(AddtoWishListRequest) returns ();  
//  rpc GetWishlist (UserId) returns ([]WishList);  
//  rpc DeleteFromWishlist (productId,UserId) returns ();  
//  rpc GetWalletHistory (UserId) returns ();    
// }

// message UserId {
//   uint32 userId = 1;
// }

// message AddressId {
//   uint32 addressId = 1;
// }
// message ProductId {
//   uint32 productId = 1;
// }
// message Pagination {
//     Count      uint32 = 1;
//     PageNumber uint32 = 2;
// }
// message ProfileResponse {
//   uint32 ID = 1;
//   string UserName = 2;
//   string FirstName = 3;
//   string LastName = 4;
//   uint32 Age = 5;
//   string Email = 6;
//   string Phone = 7;
//   Address DefaultAddress = 8;
//   repeated OrderHistory OrderHistoryList = 9;
// }

// message Address {
//   uint32 ID = 1;
//   uint32 UserID = 2;
//   string House = 4;
//   string AddressLine1 = 5;
//   string AddressLine2 = 6;
//   string City = 7;
//   string State = 8;
//   string ZipCode = 9;
//   string Country = 10;
// }
// message AddressPatchRequest {
//   uint32 ID = 1;
//   uint32 UserID = 2;
//   string House = 4;
//   string AddressLine1 = 5;
//   string AddressLine2 = 6;
//   string City = 7;
//   string State = 8;
//   string ZipCode = 9;
//   string Country = 10;
//   bool IsDefault = 11;
//   google.protobuf.Timestamp UpdatedAt = 12;
// }

// message OrderHistory {
//   uint32 ID = 1;
//   google.protobuf.Timestamp OrderDate = 2;
//   string OrderStatus = 3;
//   string DeliveryStatus = 4;
//   float OrderTotal = 5;
//   string PaymentMethod = 6;
//   string PaymentStatus = 7;
// }

// message SaveCartItemRequest {
//   UserID         uint32   = 1;
// ProductItemID  uint32   = 2;
// Quantity       uint32   = 3;
// Price          float64 = 4;
// Discount_price uint32   = 5;

// }

// message GetCartItemsbyCartIdRequest {

// }
// message GetCartItemsbyCartIdResponse {
//   ProductItemID uint32   = 1;
//   Name          string = 2;
//   Price         uint32   = 3;
//   DiscountPrice uint32   = 4;
//   Quantity      uint32   = 5;
//   QtyLeft       uint32   = 6;
//   StockStatus   bool   = 7;
//   SubTotal      uint32   = 8;
// }
// message UpdateCartRequest {
//   UserID        uint32 = 1;
// ProductItemID uint32 = 2;
// Quantity      uint32 = 3;

// }
// message DeleteCartResponse {
//   UserID        uint32 = 1;
//   ProductItemID uint= 2;
// }

// message AddtoWishListRequest {
//   UserID        uint32  = 1;
//   ProductItemID uint32 = 2;
//   Quantity      uint32 = 3;
// }
// message WishList {
//   ProductItemId uint32    = 1;
//   ProductName   string = 2;
//   Color         string = 3;
//   Storage       string = 4;
//   Price         uint32   = 5;
//   Quantity      uint32   = 6;
//   Image         string = 7;
// }
// message Wallet {
//   ID        uint32     = 1;
// UserID    uint32     = 2;
// Balance   float64  = 3;
// Remark    string = 4;
// UpdatedAt time.Time = 5;
// CreatedAt time.Time = 6;
// }


syntax = "proto3";

package pb;
option go_package = "./pkg/pb";

import "google/protobuf/empty.proto";

service UserService {
    rpc Profile() returns ();
}

message userDataRequest {
    int32 id = 1;
    string user_name = 2;
    string email = 3;
    string phone = 4;
}

message userDataResponse {
    int32 id = 1;
    string user_name = 2;
    string first_name = 3;
    string last_name = 4;
    uint32 age = 5;
    string email = 6;
    string phone = 7;
    bool block_status = 8;
    string password = 9;
}
